Validate void string
- Create index.js
- Add listener for click on "check-btm" element.
- Validate user story: When you click on the #check-btn element without entering a value into the #text-input element, an alert should appear with the text Please input a value.
- Mark as done task in README.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div>
       <div>logo!</div>
       <div>Is it a Palindrome?</div>
-      <div id="text-input">
+      <div id="input-container">
         <div>
           Enter in text to check for a palindrome:
         </div>
         <div>
           <div>
-            <input id="text-input" type="text">
+            <input id="text-input" type="text" value="">
           </div>
           <div>
             <button id="check-btn">Check</button>
