--- a/index.html
+++ b/index.html
@@ -3,30 +3,40 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Palimdrome Checker for Henry</title>
+
+  <link rel="icon" type="image/png" href="https://cdn.freecodecamp.org/universal/favicons/favicon.ico" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
   <main>
-    <div>
-      <div>logo!</div>
-      <div>Is it a Palindrome?</div>
-      <div id="input-container">
-        <div>
+    <div class="container">
+      <div><img class="freecodecamp-logo" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg"
+          alt="freeCodeCamp Logo" />
+      </div>
+      <div class="title">Is it a Palindrome?</div>
+      <div class="input-container">
+        <div class="input-label">
           Enter in text to check for a palindrome:
         </div>
-        <div>
+        <div class="input-form">
           <div>
-            <input id="text-input" type="text" value="">
+            <input class="text-input" id="text-input" type="text" value="">
           </div>
           <div>
-            <button id="check-btn">Check</button>
+            <button class="check-btn" id="check-btn">Check</button>
           </div>
         </div>
-        <div id="result"></div>
+        <div class="result" id="result"></div>
       </div>
-      <div id="palindrome-meaning">|vial icon| A palindrome is a word or sentence that's spelled the same way both
-        forward and backward, ignoring punctuation, case, and spacing.</div>
+      <div class="palindrome-meaning"><span role="img" aria-label="light-bulb">&#128161;</span> A <dfn>palindrome</dfn>
+        is a word
+        or
+        sentence that's spelled the same way both
+        forward and backward, ignoring punctuation, case, and spacing.
+      </div>
     </div>
+
   </main>
   <script src="index.js"></script>
 </body>
