Set result message area to hidden on page load.
Update index.html:
- set hidden class to result div

Update index.js:
- removes hidden class when a valid palindrome validation is done, to display the message.

Update styles.css:
- Set hidden class.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button class="check-btn" id="check-btn">Check</button>
           </div>
         </div>
-        <div class="result" id="result"></div>
+        <div class="result hidden" id="result"></div>
       </div>
       <div class="palindrome-meaning"><span role="img" aria-label="light-bulb">&#128161;</span> A <dfn>palindrome</dfn>
         is a word
